Remove several minor dependencies on wres.config.generated.
Refs #113677